--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version> <!-- Or a newer stable version -->
+		<version>3.3.3</version> <!-- Or a newer stable version -->
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>association-assignment</artifactId>
+	<groupId>com.AOOP</groupId>
+	<artifactId>VolunteerAssignmentSystemApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>association-assignment</name>
+	<name>VolunteerAssignmentSystemApplication</name>
 	<description>Association Volunteer Assignment System</description>
 	<properties>
-		<java.version>17</java.version> <!-- Or 17 -->
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
